Add unit tests for file upload services
- Implement tests for ChunkStorageService, FileAssemblyService, FileStorageService, UploadStatusService, and UploadValidationService.
- Cover various scenarios including chunk saving, file assembly, upload status management, and validation of upload requests.
- Ensure proper handling of edge cases such as missing chunks, invalid file names, and exceeding size limits.
- Utilize Mockito for mocking dependencies and StepVerifier for reactive tests.